# soc-db

./: .appveyor.yml  .dockerignore  .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  404.html  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Dockerfile  LICENSE  MIGRATION.md  Makefile  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  index.html  package.json  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: 01_bug_report.yml  02_feature_request.yml  03_data_issue.yml  config.yml
.github/workflows/: wikidata-refresh.yml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json  v3.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v2.1-MILESTONE-AUDIT.md  v2.1-REQUIREMENTS.md  v2.1-ROADMAP.md
.planning/milestones/v2.1-phases/01-refac-enrichment-module-extraction/: 01-02-PLAN.md  01-CONTEXT.md  expected_enrichment.json
.planning/milestones/v2.1-phases/02-db-sqlite-database-migration/: 02-02-PLAN.md
.planning/milestones/v2.1-phases/03-async-async-data-layer/: 03-02-PLAN.md  03-02-SUMMARY.md  03-enrichment-profile.md
.planning/milestones/v2.1-phases/05-observe-opentelemetry-observability/: 05-CONTEXT.md  05-SUMMARY.md
.planning/milestones/v2.1-phases/06-wikidata-wikidata-knowledge-sync/: 06-01-PLAN.md  06-01-SUMMARY.md  06-CONTEXT.md
.planning/milestones/v3.0-phases/01-refac-enrichment-module-extraction/: expected_enrichment.json
.planning/milestones/v3.0-phases/07-governance-and-safety/: 07-01-SUMMARY.md  07-02-SUMMARY.md  07-CONTEXT.md
.planning/milestones/v3.0-phases/08-scraper-framework/: 08-01-SUMMARY.md  08-02-PLAN.md  08-03-PLAN.md  08-CONTEXT.md
.planning/milestones/v3.0-phases/09-provenance-and-schema/: 09-CONTEXT.md  09-SUMMARY.md
.planning/milestones/v3.0-phases/10-dedup-and-identity/: 10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-CONTEXT.md
.planning/milestones/v3.0-phases/11-batch-processing-and-quality/: 11-batch-processing-SUMMARY.md
.planning/phases/01-refac-enrichment-module-extraction/: 01-01-PLAN.md  01-03-PLAN.md  01-04-PLAN.md  01-REVIEW.md  01-SUMMARY.md  expected_enrichment.json
.planning/phases/02-db-sqlite-database-migration/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-SUMMARY.md  02-CONTEXT.md
.planning/phases/03-async-async-data-layer/: 03-01-PLAN.md  03-01-SUMMARY.md  03-CONTEXT.md
.planning/phases/04-rlimit-redis-backed-rate-limiting/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-CONTEXT.md
.planning/phases/05-observe-opentelemetry-observability/: 05-01-PLAN.md  05-02-PLAN.md
.planning/phases/07-governance-and-safety/: 07-01-PLAN.md  07-02-PLAN.md
.planning/phases/08-scraper-framework/: 08-01-PLAN.md  08-02-SUMMARY.md  08-03-SUMMARY.md
.planning/phases/12-high-value-scrapers/: 12-SUMMARY.md
.planning/phases/14-ui-api-polish/: 14-PLAN.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
api/: main.py  requirements.txt
data/: LEGAL.md  actions.json  airoha.json  allwinner.json  altera.json  amazon.json  amd.json  amlogic.json  apm.json  apple.json  aspeed.json  bitmain.json  broadcom.json  cavium.json  cirrus_logic.json  exynos.json  index.json  ingenic.json  intel_atom.json  kirin.json  marvell.json  mediatek.json  microchip.json  nuvoton.json  nvidia.json  nxp_imx.json  qualcomm.json  ramon_chips_israel.json  realtek.json  renesas.json  rockchip.json  sigmastar.json  socionext.json  sophgo.json  stmicro.json  synaptics.json  tensor.json  tesla.json  ti_omap.json  toshiba.json  (+5 more)
deploy/: soc-db-update.service  soc-db-update.timer
docs/: api.md  contributing.md  openapi.json  swagger.html
docs/adr/: 0001-record-architecture-decisions.md  0002-python-package-structure.md  0003-json-schema-and-enrichment.md
schema/: chip-schema.json
scripts/: common.py  enrich_from_dts.py  extract_wikitables.py  migrate.py  parsers.py  pipeline.py  run_all.sh  run_scrapers.py  scraper_apple.py  scraper_linux_dt.py  scraper_wikidata.py  scraper_wikidata_sparql.py  scraper_wikipedia.py
src/soc_db/: __init__.py  __main__.py  batch.py  cli.py  common.py  config.py  dedup.py  log_config.py  models.py  parsers.py  provenance.py  quality.py  rate_limit.py  robots.py  scraper_apple.py  scraper_wikipedia.py  telemetry.py  wikidata.py
src/soc_db/db/: __init__.py  connection.py  migrate.py  queries.py  schema.py
src/soc_db/enrich/: __init__.py  _helpers.py  _vendor_data.py  _vendor_data_wikidata.py  aliases.py  connectivity.py  cpu.py  dts.py  gpu.py  memory.py  modem.py  npu.py  process.py  scoring.py  storage.py  year.py
src/soc_db/scraping/: __init__.py  base.py  drift.py  rate_limit.py  registry.py  source.py
tests/: check_docs_guard.py  conftest.py  validate.py
tests/benchmark/: test_enrich_one.py
tests/integration/: test_api.py  test_api_db.py  test_api_performance.py  test_cli.py  test_scraping_wikipedia.py  test_wikidata.py
tests/property/: test_enrich_one.py
tests/snapshot/: test_enrich_snapshot.py
tests/unit/: test_batch.py  test_cli.py  test_common.py  test_config.py  test_db_dual_read.py  test_db_fts.py  test_db_migration.py  test_db_schema.py  test_dedup.py  test_models.py  test_parsers.py  test_provenance.py  test_quality.py  test_queries_async.py  test_rate_limit.py  test_robots.py  test_scraping_apple_techspecs.py  test_scraping_base.py  test_scraping_drift.py  test_scraping_geekbench.py  test_scraping_intel_amd.py  test_scraping_mediatek.py  test_scraping_notebookcheck.py  test_scraping_qualcomm.py  test_scraping_rate_limit.py  test_scraping_registry.py  test_scraping_source.py  test_scraping_techpowerup.py  test_wikidata.py
(+16 files in other folders)
