[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[project]
name = "soc-db"
version = "2.1.0-dev"
description = "Enterprise-grade SoC / CPU identifier database"
authors = [
    { name = "Vitaly Kuznetsov", email = "vitkuz573@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["soc", "cpu", "scraper", "database", "qualcomm", "mediatek", "exynos"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: System :: Hardware",
    "Topic :: Database",
    "Topic :: Software Development :: Embedded Systems",
]

dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=5.1",
    "requests>=2.31",
    "aiosqlite>=0.20",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.5",
    "pydantic-settings>=2.2",
    "redis[hiredis]>=5.0,<8.0",
    "opentelemetry-api>=1.25",
    "opentelemetry-sdk>=1.25",
    "opentelemetry-instrumentation-fastapi>=0.45b",
    "prometheus-client>=0.20",
    "SPARQLWrapper>=2.0",
    "httpx>=0.28",
    "curl-cffi>=0.15",
    "selectolax>=0.4",
    "tenacity>=9.0",
    "jmespath>=1.1",
    "rapidfuzz>=3.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.8",
    "pre-commit>=3.6",
    "bandit>=1.7",
    "safety>=3.0",
    "httpx>=0.27",
    "hypothesis>=6.100",
    "pytest-benchmark>=4.0",
    "playwright>=1.40",
    "pandas>=2.2",
]

[project.urls]
Homepage = "https://github.com/vitkuz573/soc-db"
Repository = "https://github.com/vitkuz573/soc-db"
Documentation = "https://vitkuz573.github.io/soc-db/"
Changelog = "https://github.com/vitkuz573/soc-db/blob/main/CHANGELOG.md"
"Issue Tracker" = "https://github.com/vitkuz573/soc-db/issues"

[project.scripts]
soc-db = "soc_db.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["soc_db*"]

[tool.setuptools.package-data]
soc_db = ["py.typed"]

[tool.ruff]
target-version = "py312"
line-length = 160
exclude = [".venv/"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "SIM", "ARG", "C4", "ISC", "PIE", "T20", "RET", "SLF", "SLOT", "YTT", "ASYNC", "FURB"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "D100", "D101", "D102", "D103", "T201", "ARG002", "SLF001"]
"src/soc_db/cli.py" = ["T201", "E501", "C401", "ARG001"]
"bin/soc-db" = ["T201"]
"tests/validate.py" = ["T201"]
"api/*" = ["SLF001", "C401"]
"src/soc_db/scraper_apple.py" = ["ARG001"]
"src/soc_db/scraper_wikipedia.py" = ["SIM110"]
"src/soc_db/parsers.py" = ["N806", "E501", "F841"]

[tool.ruff.format]
preview = true

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
check_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = ["tests.*", "api.*", "bin.*", "soc_db.parsers", "soc_db.scraper_wikipedia", "soc_db.scraper_apple"]
ignore_errors = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
filterwarnings = ["ignore::DeprecationWarning"]

[tool.coverage.run]
source = ["soc_db"]
omit = ["tests/*", "*/scraper_*.py", "*/parsers.py", "*/__main__.py", "*/cli.py"]

[tool.coverage.report]
show_missing = true
fail_under = 60
skip_empty = true
